examples/test/testpolicy15540.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy15540
  namespace: namespace93
spec:
  podSelector:
    matchLabels:
      key14: value49
      key19: value39
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key13: value27
          key43: value49
          key28: value14
      podSelector:
        matchLabels:
          key18: value2
